--- a/App/App/Views/ForgotPasswordPage.xaml
+++ b/App/App/Views/ForgotPasswordPage.xaml
@@ -6,19 +6,18 @@
              mc:Ignorable="d"
              x:Class="App.ForgotPasswordPage">      
     <ContentPage.Content>
-        <StackLayout Padding="20">            
+        <StackLayout Padding="20" Visual="Material">            
                 <StackLayout Margin="0,10,0,0">
-                    <Label Text="Forgot.&#10;Password." FontSize="26" TextColor="BlueViolet"/>
+                    <Label Text="Forgot.&#10;Password." FontSize="22" TextColor="BlueViolet"/>
                 </StackLayout>
 
-                <StackLayout Margin="0,50,0,0">                                  
-                    <Label Text="Email" Margin="5,0,0,0"/>                
+                <StackLayout Margin="0,50,0,0">                                                      
                     <Label x:Name="labelInvalidEmail" Text="Invalid email" Margin="5,0,0,0" Style="{StaticResource LabelValidation}"/>                
-                    <Entry x:Name="entryEmail" Style="{StaticResource TextEntry}"/>
+                    <Entry x:Name="entryEmail" Placeholder="Email" Style="{StaticResource TextEntry}"/>
                 </StackLayout>
 
-                <StackLayout Margin="50,35,50,15" VerticalOptions="EndAndExpand">
-                <Button x:Name="buttonRecover" Text="Recover" Style="{StaticResource PrimaryButton}"/>
+                <StackLayout Margin="50,20,50,10" VerticalOptions="EndAndExpand">
+                <Button x:Name="buttonRecover" Text="Recover" Style="{StaticResource PrimaryButton}" Clicked="ButtonRecover_Clicked"/>
                 </StackLayout>            
         </StackLayout>        
     </ContentPage.Content>
