--- a/App/App/Views/InitialPage.xaml
+++ b/App/App/Views/InitialPage.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d"
              x:Class="App.InitialPage">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="BlueViolet">
+        <StackLayout BackgroundColor="BlueViolet" Visual="Material">
             <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
                 <Image Margin="0,50,0,0">
                     <Image.Source>
