--- a/App/App/Views/MainPage.xaml
+++ b/App/App/Views/MainPage.xaml
@@ -6,49 +6,54 @@
              mc:Ignorable="d"
              x:Class="App.MainPage" Appearing="ContentPage_Appearing">
 
-    <StackLayout Padding="20">
+    <StackLayout Padding="20" Visual="Material">
         <StackLayout Margin="0,10,0,0">
-            <Label x:Name="labelMessageUser" Text="Hello.&#10;Here, your saved recipes." FontSize="26" TextColor="BlueViolet"/>
+            <Label x:Name="labelTitle" Text="Hello.&#10;Here, your saved recipes." FontSize="22" TextColor="BlueViolet"/>
+        </StackLayout>        
+        <StackLayout Margin="0,15,0,0">
+            <Entry x:Name="entrySearch" Placeholder="Search a recipe" TextChanged="EntrySearch_TextChanged" Style="{StaticResource TextEntry}" />
         </StackLayout>
-        <StackLayout Margin="0,25,0,0">
-            <Entry x:Name="entrySearch" Placeholder="Search a recipe" TextChanged="EntrySearch_TextChanged"/>
+        <StackLayout>
+            <Frame BackgroundColor="#EDEDED" CornerRadius="16" Margin="0,15,0,0">
+                <StackLayout>
+                    <StackLayout x:Name="stackLayoutActivityIndicator">
+                        <ActivityIndicator x:Name="activityIndicator" Color="BlueViolet" HorizontalOptions="Center" VerticalOptions="Start" IsRunning="False"/>
+                    </StackLayout>
+                    <StackLayout x:Name="stackLayoutOfLabelMessage" VerticalOptions="Center" HorizontalOptions="Center">
+                        <Label x:Name="labelMessage" Text="No items found :(" VerticalOptions="CenterAndExpand" FontSize="16"/>
+                    </StackLayout>
+                    <StackLayout x:Name="stackLayoutOfListViewRecipes">
+                        <ListView x:Name="listViewRecipes" ItemSelected="ListViewRecipes_ItemSelected" ItemsSource="{Binding Recipe}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <ViewCell>
+                                        <ViewCell.View>
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="*"/>
+                                                    <RowDefinition Height="Auto"/>
+                                                </Grid.RowDefinitions>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="5"/>
+                                                </Grid.ColumnDefinitions>
+                                                <StackLayout>
+                                                    <Label Grid.Column="0" FontSize="12" Text="{Binding IsFavorite}" TextColor="BlueViolet"/>
+                                                    <Label Grid.Row="0" FontSize="16" Text="{Binding Name}" TextColor="Black"/>
+                                                    <Label Grid.Row="1" FontSize="12" Text="{Binding Ingredient.Description}" TextColor="BlueViolet"/>
+                                                </StackLayout>
+                                            </Grid>
+                                        </ViewCell.View>
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackLayout>
+                </StackLayout>
+            </Frame>
         </StackLayout>
-        <StackLayout>            
-            <StackLayout>
-                <ActivityIndicator x:Name="activityIndicator" Color="BlueViolet" HorizontalOptions="Center" VerticalOptions="Start" IsRunning="False"/>                                
-            </StackLayout>
-
-            <StackLayout x:Name="stackLayoutOfLabelMessage" VerticalOptions="Center" HorizontalOptions="Center">
-                <Label x:Name="labelMessage" Text="No items found :(" VerticalOptions="CenterAndExpand"/>
-            </StackLayout>
-
-            <StackLayout x:Name="stackLayoutOfListViewRecipes">
-                <ListView x:Name="listViewRecipes">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <ViewCell.View>
-                                    <Grid>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="10"/>                                            
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>                                            
-                                        </Grid.ColumnDefinitions>
-                                        <StackLayout>
-                                            <Label Grid.Row="0" FontSize="16" Text="{Binding Name}" TextColor="Black"/>                                            
-                                        </StackLayout>
-                                    </Grid>
-                                </ViewCell.View>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackLayout>
-
-        </StackLayout>
-        <StackLayout Margin="50,35,50,15" VerticalOptions="EndAndExpand">
-            <Button x:Name="buttonRegister" Text="Register" Style="{StaticResource PrimaryButton}" Clicked="ButtonRegister_Clicked"/>
+        <StackLayout Margin="50,15,50,10" VerticalOptions="EndAndExpand">
+            <Button x:Name="buttonRegister" Text="Get From Afrodite" Style="{StaticResource PrimaryButton}" Clicked="ButtonRegister_Clicked"/>
         </StackLayout>
     </StackLayout>
 
