--- a/App/App/Views/RecipeDetailPage.xaml
+++ b/App/App/Views/RecipeDetailPage.xaml
@@ -3,68 +3,62 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App.Views.RecipeDetailPage">
     <ContentPage.Content>
-        <StackLayout Padding="20">
+        <StackLayout Padding="20" Visual="Material">
             <StackLayout Margin="0,10,0,0" VerticalOptions="StartAndExpand">
-                <Label Text="Here.&#10;Details of recipe." VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" FontSize="Title" TextColor="BlueViolet"/>
-            </StackLayout>
+                <Label Text="Here.&#10;Details of recipe." VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" FontSize="22" TextColor="BlueViolet"/>
+            </StackLayout>            
             <StackLayout Margin="0,8,0,0" Orientation="Vertical">
                 <StackLayout>
-                    <Label x:Name="labelNameOfRecipe" Text="Name" FontSize="20"/>
+                    <Label x:Name="labelNameOfRecipe" Text="Name" FontSize="18"/>
                 </StackLayout>
-
                 <StackLayout Margin="0,8,0,0">
                     <Label Text="Ingredients" TextColor="BlueViolet"/>
-                    <ListView x:Name="listViewIngredients" Margin="0,5,0,0">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <ViewCell>
-                                    <ViewCell.View>
-                                        <Grid>
+                    <Frame BackgroundColor="#EDEDED" CornerRadius="16">
+                        <ListView x:Name="listViewIngredients" Margin="0,5,0,0">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <ViewCell>
+                                        <Grid Padding="10">
                                             <Grid.RowDefinitions>
-                                                <RowDefinition Height="60"/>
+                                                <RowDefinition Height="50"></RowDefinition>
                                             </Grid.RowDefinitions>
                                             <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="*"></ColumnDefinition>
                                             </Grid.ColumnDefinitions>
-                                            <StackLayout>
-                                                <Label Grid.Row="0" FontSize="15" Text="{Binding Description}" TextColor="Black"/>
-                                            </StackLayout>
+                                            <Label Grid.Row="0" Grid.Column="0" Text="{Binding Description}" />
                                         </Grid>
-                                    </ViewCell.View>
-                                </ViewCell>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </StackLayout>                              
-                <StackLayout HorizontalOptions="Center">
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Frame>                                                      
+                </StackLayout>                 
+                <StackLayout>                    
                     <Label Text="Preparation Mode" TextColor="BlueViolet"/>
-                    <ListView x:Name="listViewPreparationMode" Margin="0,5,0,0">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <ViewCell>
-                                    <ViewCell.View>
-                                        <Grid>
-                                            <Grid.RowDefinitions>                                                
-                                                <RowDefinition Height="100"/>
+                    <Frame BackgroundColor="#EDEDED" CornerRadius="16">
+                        <ListView x:Name="listViewPreparationMode" Margin="0,5,0,0">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <ViewCell>
+                                        <Grid Padding="10">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="50"></RowDefinition>
                                             </Grid.RowDefinitions>
-                                            <Grid.ColumnDefinitions>                                                
-                                                <ColumnDefinition Width="Auto"/>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"></ColumnDefinition>
                                             </Grid.ColumnDefinitions>
-                                            <StackLayout>
-                                                <Label Grid.Row="1" FontSize="15" Text="{Binding Description}" TextColor="Black"/>
-                                            </StackLayout>
+                                            <Label Grid.Row="0" Grid.Column="0" Text="{Binding Description}" />
                                         </Grid>
-                                    </ViewCell.View>
-                                </ViewCell>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </StackLayout>
-
-
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Frame>                                      
+                </StackLayout>                
             </StackLayout>
-            <StackLayout Margin="50,0,50,0" VerticalOptions="CenterAndExpand">
+            <StackLayout Margin="50,20,50,10" VerticalOptions="CenterAndExpand">                
                 <Button x:Name="buttonFavorite" BackgroundColor="BlueViolet" CornerRadius="10" TextColor="White" Text="Favorite" Clicked="ButtonFavorite_Clicked"/>
+                <Button x:Name="buttonUnfavorite" BackgroundColor="BlueViolet" CornerRadius="10" TextColor="White" Text="Unfavorite" IsVisible="False" Clicked="ButtonUnfavorite_Clicked"/>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
