--- a/App/App/App.xaml
+++ b/App/App/App.xaml
@@ -6,47 +6,41 @@
              mc:Ignorable="d"
              x:Class="App.App">
     <Application.Resources>
-        <ResourceDictionary>
+        <ResourceDictionary>            
             <Style x:Key="PrimaryButton" TargetType="Button">
                 <Setter Property="BackgroundColor" Value="BlueViolet"/>
                 <Setter Property="TextColor" Value="White"/>
                 <Setter Property="CornerRadius" Value="10"/>
             </Style>
-
             <Style x:Key="SecundaryButton" TargetType="Button">
                 <Setter Property="BackgroundColor" Value="White"/>
                 <Setter Property="TextColor" Value="Black"/>
                 <Setter Property="CornerRadius" Value="10"/>                              
             </Style>
-
             <Style x:Key="TextEntry" TargetType="Entry">
                 <Setter Property="ClearButtonVisibility" Value="WhileEditing"/>
                 <Setter Property="IsTextPredictionEnabled" Value="False"/>
                 <Setter Property="Keyboard" Value="Text"/>
-                <Setter Property="TextColor" Value="BlueViolet"/>
+                <Setter Property="TextColor" Value="#757575"/>
             </Style>
-
             <Style x:Key="EmailEntry" TargetType="Entry">
                 <Setter Property="ClearButtonVisibility" Value="WhileEditing"/>
                 <Setter Property="IsTextPredictionEnabled" Value="False"/>
-                <Setter Property="Keyboard" Value="Email"/>                
-                <Setter Property="TextColor" Value="BlueViolet"/>
+                <Setter Property="Keyboard" Value="Email"/>
+                <Setter Property="TextColor" Value="#757575"/>
             </Style>
-
             <Style x:Key="PasswordEntry" TargetType="Entry">
                 <Setter Property="ClearButtonVisibility" Value="WhileEditing"/>
                 <Setter Property="IsTextPredictionEnabled" Value="False"/>
                 <Setter Property="Keyboard" Value="Default"/>
-                <Setter Property="TextColor" Value="BlueViolet"/>
+                <Setter Property="TextColor" Value="#757575"/>
                 <Setter Property="IsPassword" Value="True"/>
             </Style>
-
             <Style x:Key="LabelValidation" TargetType="Label">
-                <Setter Property="FontSize" Value="10"/>
+                <Setter Property="FontSize" Value="11"/>
                 <Setter Property="TextColor" Value="#FF3A30"/>                                
                 <Setter Property="IsVisible" Value="false"/>
-            </Style>
-
+            </Style>            
         </ResourceDictionary>
     </Application.Resources>    
 </Application>
